packages/web/src/components/spa/Navigation/DesktopNav/desktop_navbar.css
.navdesktop-container {
    width: 100%;
    height: 10vh;
    color: white;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-left: 10%;
    padding-right: 10%;
    align-items: center;
    font-family: 'Poppins';
    font-weight: 500;

    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.navdesktop-logo {
    width: 30%;
    display: flex;
    align-items: center;
    cursor: pointer;
}

.navdesktop-logo p {
    font-family: 'Poppins';
    font-size: 1.5rem;
    margin: 0;
}

.navdesktop-logo-image {
    width: 6%;
    margin-right: 1%;
}

@media only screen and (max-width: 4000px) {
    .navdesktop-logo-image {
        width: 15%;
        margin-right: 2%;
    }
}

/*Buttons*/

.navdesktop-buttons {
    min-width: 40%;
    width: 45%;
    max-width: 50%;
    align-items: center;
    display: inline-flex;
    justify-content: space-between;
    font-weight: bold;
}

.navdesktop-navdivs a {
    position: relative;
    z-index: 1;
    transition: 0.35s;
    padding-left: 5px;
    padding-right: 5px;
    display: flex;
    color: white;
    text-decoration: none;
    font-size: 1.2rem;
    justify-content: center;
    align-items: center;
}

.navdesktop-navdivs a:hover {
    color: rgb(21, 76, 121);
}

.navdesktop-navdivs a:after {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: auto;
    width: 100%;
    height: 1px;
    content: '.';
    color: transparent;
    border-radius: 3px;
    background: #fff;
    visibility: none;
    opacity: 0;
    z-index: -1;
    transition: 0.35s;
}

.navdesktop-navdivs a:hover:after {
    transition: 0.35s;
    opacity: 1;
    visibility: visible;
    height: 100%;
}

.hackaubg-btn {
    height: 6vh;
    color: white;
    text-decoration: none;
    font-size: 1.1rem;
    padding: 0 2% 0 2%;
    width: fit-content;
    cursor: pointer;
    border: none;
    font-weight: bold;
    border-radius: 5px;
    background-size: 300% 100%;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-image: linear-gradient(
        to right,
        #32baf4,
        #467edd,
        #3f86ed,
        #47acdf,
        #24cc8e
    );
    box-shadow: 0 2px 10px 0 rgb(70, 126, 221);
}

.hackaubg-btn p {
    padding: 0;
    margin: 0;
}

.hackaubg-btn:hover {
    background-position: 100% 0;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

@keyframes hackaubg-btn {
    0% {
        background-position: 0% 10%;
    }
    50% {
        background-position: 100% 50%;
    }
    1000% {
        background-position: 0% 50%;
    }
}

